--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://nikolayvalev.github.io",
+  "homepage": "https://NikolayValev.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
